align text fix

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a {
 
 .a_text{
     width: 110px;
+    text-align: center;
 }
 
 .menu a{
